# extlib

./: .gitignore  CMakeLists.txt  README.md  extlib.h
cmake/: ExtlibConfig.cmake
examples/: CMakeLists.txt  example.c
include/: ext_map.h
include/extlib/: assert.h  ext_assert.h  ext_string.h  ext_vector.h  map.h  string.h  vector.h
libs/: CMakeLists.txt  ext_map.c  ext_string.c  map.c  string.c
